[package]
name = "logrotate"
version = "0.1.0"
edition = "2021"
authors = ["XiaoYao<you.jianglong@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version="4.4.0", features=["derive"] }
ctrlc = { version="3.4.0", features=["termination"] }
