[package]
name = "logrotate"
version = "0.2.0"
edition = "2021"
authors = ["XiaoYao<you.jianglong@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive", "env"] }
libc = "0.2.158"
libflate = "2"
tokio = { version = "1.40.0", features = ["full"] }
toml = { version = "0.8.15", default-features = false, features = ["parse"] }
